--- a/extras/index3.html
+++ b/extras/index3.html
@@ -10,62 +10,42 @@
                     font-family: Arial, sans-serif;
                     margin: 0;
                     padding: 0;
-                    background-color: #f9f9f9;
+                    background-color: #f5f5f5;
                 }
                 header {
                     background-color: #4CAF50;
                     color: white;
-                    padding: 20px;
+                    padding: 10px 20px;
                     text-align: center;
-                }
-                header h1 {
-                    margin: 0;
-                    font-size: 2.5rem;
                 }
                 section {
                     padding: 20px;
                 }
-                h2 {
-                    font-size: 1.8rem;
-                    margin-bottom: 20px;
+                h1 {
+                    font-size: 2rem;
                 }
                 ul {
                     list-style-type: none;
                     padding: 0;
-                    display: grid;
-                    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-                    gap: 20px;
                 }
                 li {
                     background: white;
-                    border-radius: 10px;
-                    overflow: hidden;
-                    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-                    transition: transform 0.2s, box-shadow 0.2s;
-                }
-                li:hover {
-                    transform: translateY(-5px);
-                    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+                    margin: 10px 0;
+                    padding: 15px;
+                    border-radius: 5px;
+                    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
                 }
                 img {
-                    width: 100%;
-                    height: 200px;
-                    object-fit: cover;
-                    border-bottom: 1px solid #ddd;
+                    max-width: 100%;
+                    height: auto;
+                    border-radius: 5px;
                 }
                 a {
                     text-decoration: none;
-                    color: #333;
-                    display: block;
-                    padding: 15px;
+                    color: inherit;
                 }
                 a:hover {
-                    color: #4CAF50;
-                }
-                p {
-                    font-size: 1rem;
-                    line-height: 1.5;
-                    margin: 0;
+                    text-decoration: underline;
                 }
             </style>
         </head>
